Fixed issue with OOP being text-align centered

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ a {
 
 #contact {
   background-color: darkgray;
-  padding-bottom: 300px;
+  padding-bottom: 600px;
 }
 
 #profile, #projects, #notoriety {
